--- a/index.html
+++ b/index.html
@@ -62,17 +62,47 @@ onAuthStateChanged(auth,user=>{
     logoutBtn.classList.add("hidden");
   }
 });
+<!-- Notice Ticker -->
+<div class="notice-ticker"><span class="ticker-text" id="noticeText"></span></div>
 
-// 🔹 Notice Save
-const noticeRef = doc(db,"settings","notice");
-document.getElementById("saveNoticeBtn").onclick = async()=>{
-  await setDoc(noticeRef,{text:noticeInput.value.trim()});
+<style>
+.notice-ticker {
+  background: #dc2626; /* red color */
+  color: white;
+  font-weight: 600;
+  font-size: 13px;
+  padding: 4px 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  position: sticky;
+  top: 50px; /* header ke niche */
+  z-index: 300;
 }
 
-// 🔹 Load Notice
-onSnapshot(noticeRef,snap=>{
-  noticeText.textContent = snap.exists()?snap.data().text:"";
-});
+/* scrolling text animation */
+.ticker-text {
+  display: inline-block;
+  padding-left: 100%; /* start from right outside */
+  animation: scrollNotice 15s linear infinite;
+}
+
+@keyframes scrollNotice {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-100%); }
+}
+</style>
+
+<script>
+// Example: dynamically set notice text
+const noticeTextEl = document.getElementById("noticeText");
+
+// Firebase snapshot for notice
+// assume noticeText content fetched from Firebase
+// onSnapshot(noticeRef, snap => { noticeTextEl.textContent = snap.exists()?snap.data().text:""; });
+
+// For testing without Firebase:
+noticeTextEl.textContent = "🚨 Breaking News: Marathi Crime Files updates daily! Stay tuned! 🚨";
+</script>
 
 // 🔹 Add Text/Image Blocks
 document.getElementById("addTextBtn").onclick = ()=>{
