--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ const headlineText = document.getElementById("headlineText");
 let editingId = null;
 let currentPosts = [];
 
-// 🔹 Login
+// 🔹 Login/Logout
 loginBtn.onclick = ()=>signInWithPopup(auth, provider).catch(e=>alert(e.message));
 logoutBtn.onclick = ()=>signOut(auth);
 
@@ -62,47 +62,6 @@ onAuthStateChanged(auth,user=>{
     logoutBtn.classList.add("hidden");
   }
 });
-<!-- Notice Ticker -->
-<div class="notice-ticker"><span class="ticker-text" id="noticeText"></span></div>
-
-<style>
-.notice-ticker {
-  background: #dc2626; /* red color */
-  color: white;
-  font-weight: 600;
-  font-size: 13px;
-  padding: 4px 10px;
-  overflow: hidden;
-  white-space: nowrap;
-  position: sticky;
-  top: 50px; /* header ke niche */
-  z-index: 300;
-}
-
-/* scrolling text animation */
-.ticker-text {
-  display: inline-block;
-  padding-left: 100%; /* start from right outside */
-  animation: scrollNotice 15s linear infinite;
-}
-
-@keyframes scrollNotice {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-100%); }
-}
-</style>
-
-<script>
-// Example: dynamically set notice text
-const noticeTextEl = document.getElementById("noticeText");
-
-// Firebase snapshot for notice
-// assume noticeText content fetched from Firebase
-// onSnapshot(noticeRef, snap => { noticeTextEl.textContent = snap.exists()?snap.data().text:""; });
-
-// For testing without Firebase:
-noticeTextEl.textContent = "🚨 Breaking News: Marathi Crime Files updates daily! Stay tuned! 🚨";
-</script>
 
 // 🔹 Add Text/Image Blocks
 document.getElementById("addTextBtn").onclick = ()=>{
@@ -147,15 +106,28 @@ document.getElementById("publishBtn").onclick = async()=>{
   aTitle.value=aCat.value=""; blocksList.innerHTML="";
 }
 
+// 🔹 Save Notice
+document.getElementById("saveNoticeBtn").onclick = async()=>{
+  await setDoc(doc(db,"settings","notice"),{text:noticeInput.value.trim()});
+  noticeInput.value = "";
+}
+
 // 🔹 Load Posts
 onSnapshot(query(collection(db,"news"),orderBy("time","desc")),snap=>{
   currentPosts = snap.docs.map(d=>({id:d.id,...d.data()}));
   renderPosts();
 });
 
+// 🔹 Load Notice
+onSnapshot(doc(db,"settings","notice"),snap=>{
+  if(snap.exists()) noticeText.textContent = snap.data().text;
+});
+
 // 🔹 Render Posts
 function renderPosts(){
   postsArea.innerHTML="";
+  const sliderImgs = [];
+
   currentPosts.forEach((d,i)=>{
     const firstImg = d.blocks.find(b=>b.type==="image")?.url || "https://via.placeholder.com/300x200?text=No+Image";
     const firstText = d.blocks.find(b=>b.type==="text")?.text.substring(0,80)+"..." || "";
@@ -163,18 +135,20 @@ function renderPosts(){
     card.className="card";
     card.innerHTML = `<img src='${firstImg}' class='image-zoom'><div class='card-body'><h3>${d.title}</h3><p>${firstText}</p></div>`;
     postsArea.appendChild(card);
+    sliderImgs.push(firstImg);
   });
 
-  // Image slider animation
+  // 🔹 Image slider animation (advertising)
   let idx = 0;
-  const sliderImgs = document.querySelectorAll(".image-zoom");
+  const images = document.querySelectorAll(".image-zoom");
+  images.forEach((img,i)=>{if(i!==0) img.style.display="none";});
   setInterval(()=>{
-    sliderImgs.forEach((img,i)=>img.style.display="none");
-    if(sliderImgs[idx]) sliderImgs[idx].style.display="block";
-    idx = (idx+1)%sliderImgs.length;
+    images.forEach(img=>img.style.display="none");
+    if(images[idx]) images[idx].style.display="block";
+    idx = (idx+1)%images.length;
   },3000);
 
-  // Headline ticker
+  // 🔹 Headline ticker
   headlineText.textContent=currentPosts.slice(0,5).map(p=>p.title).join(" — ");
 }
 
@@ -188,8 +162,10 @@ header{display:flex;justify-content:space-between;align-items:center;padding:8px
 header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:cover;}
 .nav-btn, .auth-btn{padding:4px 8px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
 .nav-btn:hover,.auth-btn:hover{transform:scale(1.05);}
-.notice-ticker{background:#1e3a8a;color:white;font-weight:600;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;}
-.headline-ticker{background:#2563eb;color:white;font-weight:500;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;}
+.notice-ticker{background:#dc2626;color:white;font-weight:600;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:50px;z-index:300;}
+.ticker-text{display:inline-block;padding-left:100%;animation:scrollNotice 15s linear infinite;}
+@keyframes scrollNotice{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
+.headline-ticker{background:#2563eb;color:white;font-weight:500;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:75px;z-index:290;}
 .posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:10px;}
 .card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;position:relative;}
 .card:hover{transform:scale(1.02);}
@@ -224,7 +200,7 @@ header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:
   </div>
 </header>
 
-<div class="notice-ticker"><span id="noticeText"></span></div>
+<div class="notice-ticker"><span class="ticker-text" id="noticeText"></span></div>
 <div class="headline-ticker"><span id="headlineText"></span></div>
 
 <section id="editorArea" class="editor hidden">
