--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- Firebase -->
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getAuth, signInWithPopup, GoogleAuthProvider, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 import { getFirestore, collection, addDoc, doc, setDoc, deleteDoc, onSnapshot, query, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
 // 🔹 Firebase Config
@@ -44,7 +44,7 @@ const headlineText = document.getElementById("headlineText");
 let editingId = null;
 let currentPosts = [];
 
-// 🔹 Login/Logout
+// 🔹 Login
 loginBtn.onclick = ()=>signInWithPopup(auth, provider).catch(e=>alert(e.message));
 logoutBtn.onclick = ()=>signOut(auth);
 
@@ -111,118 +111,81 @@ onSnapshot(query(collection(db,"news"),orderBy("time","desc")),snap=>{
   renderPosts();
 });
 
+// 🔹 Notice
+document.getElementById("saveNoticeBtn").onclick = async()=>{
+  await setDoc(doc(db,"settings","notice"),{text:noticeInput.value.trim()});
+}
+onSnapshot(doc(db,"settings","notice"),snap=>{
+  noticeText.textContent = snap.exists()?snap.data().text:"";
+});
+
 // 🔹 Render Posts
 function renderPosts(){
   postsArea.innerHTML="";
   currentPosts.forEach((d,i)=>{
-    const images = d.blocks.filter(b=>b.type==="image").map(b=>b.url);
+    const firstImg = d.blocks.find(b=>b.type==="image")?.url || "https://via.placeholder.com/300x200?text=No+Image";
     const firstText = d.blocks.find(b=>b.type==="text")?.text.substring(0,80)+"..." || "";
-    
     const card = document.createElement("div");
     card.className="card";
-    card.innerHTML = `
-      <div class="image-slider-container">
-        ${images.map((url,j)=>`<img src="${url}" class="slider-img" style="display:${j===0?'block':'none'}">`).join('')}
-      </div>
-      <div class="card-body"><h3>${d.title}</h3><p>${firstText}</p></div>
-    `;
-    card.onclick = ()=>alert(`Post clicked: ${d.title}`);
+    card.innerHTML = `<img src='${firstImg}' class='card-img'><div class='card-body'><h3>${d.title}</h3><p>${firstText}</p></div>`;
+    card.onclick = ()=>openModal(d);
     postsArea.appendChild(card);
-
-    // Image slider animation
-    let idx = 0;
-    const imgs = card.querySelectorAll(".slider-img");
-    setInterval(()=>{
-      imgs.forEach(img=>img.style.display="none");
-      imgs[idx].style.display="block";
-      idx = (idx+1)%imgs.length;
-    },3000);
   });
 
   // Headline ticker
   headlineText.textContent=currentPosts.slice(0,5).map(p=>p.title).join(" — ");
 }
 
+// 🔹 Open Modal with images slider
+function openModal(post){
+  const modal = document.getElementById("postModal");
+  const titleEl = document.getElementById("modalTitle");
+  const catEl = document.getElementById("modalCategory");
+  const textBlocks = document.getElementById("modalTextBlocks");
+  const imgSlider = document.getElementById("modalImageSlider");
+
+  titleEl.textContent = post.title;
+  catEl.textContent = post.category || "";
+  textBlocks.innerHTML = "";
+  post.blocks.filter(b=>b.type==="text").forEach(t=>{
+    const p = document.createElement("p");
+    p.textContent = t.text;
+    p.className = "mb-2";
+    textBlocks.appendChild(p);
+  });
+
+  // Images
+  imgSlider.innerHTML = "";
+  const images = post.blocks.filter(b=>b.type==="image").map(b=>b.url);
+  images.forEach((url,i)=>{
+    const img = document.createElement("img");
+    img.src = url;
+    img.className = "absolute top-0 left-0 w-full h-full object-cover transition-opacity duration-500";
+    img.style.opacity = i===0?1:0;
+    imgSlider.appendChild(img);
+  });
+
+  let idx = 0;
+  if(images.length>1){
+    setInterval(()=>{
+      const imgs = imgSlider.querySelectorAll("img");
+      imgs.forEach((img,i)=>img.style.opacity = 0);
+      imgs[idx].style.opacity = 1;
+      idx = (idx+1)%imgs.length;
+    },3000);
+  }
+
+  modal.classList.remove("hidden");
+}
+document.getElementById("closeModal").onclick = ()=>document.getElementById("postModal").classList.add("hidden");
+
 // 🔹 Menu toggle
 function toggleMenu(){document.getElementById("menuList").classList.toggle("hidden");}
-
-// 🔹 Notice save
-document.getElementById("saveNoticeBtn").onclick=()=>{
-  setDoc(doc(db,"settings","notice"),{text:noticeInput.value.trim()});
-}
-
-// 🔹 Load Notice
-onSnapshot(doc(db,"settings","notice"),snap=>{
-  noticeText.textContent = snap.exists()?snap.data().text:"";
-});
 </script>
 
 <style>
 body{margin:0;font-family:Arial,sans-serif;background:#f6f7fb;color:#0b2540;}
 header{display:flex;justify-content:space-between;align-items:center;padding:8px 12px;background:#1e40af;color:white;position:sticky;top:0;z-index:300;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
 header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:cover;}
-.nav-btn, .auth-btn{padding:4px 8px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
-.nav-btn:hover,.auth-btn:hover{transform:scale(1.05);}
-.notice-ticker{background:#dc2626;color:white;font-weight:600;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:60px;z-index:300;}
-.ticker-text{display:inline-block;padding-left:100%;animation:scrollNotice 15s linear infinite;}
-@keyframes scrollNotice{0%{transform:translateX(0);}100%{transform:translateX(-100%);}}
-.headline-ticker{background:#2563eb;color:white;font-weight:500;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:90px;z-index:300;}
-.posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:10px;}
-.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;position:relative;}
-.card:hover{transform:scale(1.02);}
-.card img{width:100%;height:180px;object-fit:cover;display:block;}
-.card-body{padding:8px;}
-.card-body h3{font-weight:700;font-size:18px;margin-bottom:4px;}
-.card-body p{font-size:14px;color:#555;margin-bottom:6px;}
-.editor{padding:12px;background:#fff;margin:6px;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
-.editor input,.editor textarea{border:1px solid #ccc;border-radius:6px;padding:6px;margin-bottom:6px;width:100%;}
-.editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
-.image-slider-container{position:relative;width:100%;height:180px;overflow:hidden;}
-.image-slider-container img{position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;transition:opacity 0.5s;}
-</style>
-</head>
-<body>
-
-<header class="flex justify-between items-center">
-  <div class="flex items-center space-x-2">
-    <img src="https://i.postimg.cc/6Q5TYPVR/Whats-App-Image-2025-10-26-at-2-42-16-PM.jpg" alt="Logo">
-    <h1 class="font-bold text-base sm:text-lg">Marathi Crime Files</h1>
-  </div>
-  <div class="relative">
-    <button onclick="toggleMenu()" class="nav-btn">☰ Menu</button>
-    <div id="menuList" class="hidden absolute right-0 mt-1 bg-white text-blue-900 rounded-md shadow-lg overflow-hidden z-[10000]">
-      <button class="dropdown-btn">Story</button>
-      <button class="dropdown-btn">Gumshuda</button>
-      <button class="dropdown-btn">Lawarish</button>
-      <button class="dropdown-btn">Crime</button>
-    </div>
-  </div>
-  <div class="flex space-x-1">
-    <button id="loginBtn" class="auth-btn bg-green-500 text-white">Login</button>
-    <button id="logoutBtn" class="auth-btn bg-red-600 text-white hidden">Logout</button>
-  </div>
-</header>
-
-<div class="notice-ticker"><span id="noticeText"></span></div>
-<div class="headline-ticker"><span id="headlineText"></span></div>
-
-<section id="editorArea" class="editor hidden">
-  <h2>🖋️ Admin: Create/Edit News</h2>
-  <input id="aTitle" placeholder="Title">
-  <input id="aCat" placeholder="Category">
-  <div id="blocksList"></div>
-  <button id="addTextBtn">Add Text</button>
-  <button id="addImageBtn">Add Image</button>
-  <button id="publishBtn">Publish</button>
-</section>
-
-<section id="postsArea" class="posts-grid"></section>
-
-<section id="noticeEditor" class="editor hidden">
-  <h2>📰 Admin Notice</h2>
-  <input id="noticeInput" placeholder="Enter notice text...">
-  <button id="saveNoticeBtn">Save Notice</button>
-</section>
-
-</body>
-</html>
+.nav-btn,.auth-btn{padding:4px 8px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
+.nav-btn:hover
