--- a/index.html
+++ b/index.html
@@ -118,74 +118,212 @@ document.getElementById("saveNoticeBtn").onclick = async()=>{
 onSnapshot(doc(db,"settings","notice"),snap=>{
   noticeText.textContent = snap.exists()?snap.data().text:"";
 });
+// Show modal
+modalClose?.addEventListener('click',()=>modalBg.style.display="none");
+modalBg?.addEventListener('click', e=>{if(e.target===modalBg) modalBg.style.display="none";})
 
-// 🔹 Render Posts
-function renderPosts(){
-  postsArea.innerHTML="";
-  currentPosts.forEach((d,i)=>{
-    const firstImg = d.blocks.find(b=>b.type==="image")?.url || "https://via.placeholder.com/300x200?text=No+Image";
-    const firstText = d.blocks.find(b=>b.type==="text")?.text.substring(0,80)+"..." || "";
-    const card = document.createElement("div");
-    card.className="card";
-    card.innerHTML = `<img src='${firstImg}' class='card-img'><div class='card-body'><h3>${d.title}</h3><p>${firstText}</p></div>`;
-    card.onclick = ()=>openModal(d);
-    postsArea.appendChild(card);
+function showModal(index){
+  const d = currentPosts[index];
+  currentIndex = index;
+  modalContent.innerHTML=`<h2 class='text-lg font-bold mb-2'>${d.title}</h2>`;
+  d.blocks.forEach(b=>{
+    if(b.type==="text") modalContent.innerHTML+=`<p class='mb-2 text-gray-800'>${b.text}</p>`;
+    else modalContent.innerHTML+=`<img src='${b.url}' class='image-zoom mb-2'>`;
   });
 
-  // Headline ticker
-  headlineText.textContent=currentPosts.slice(0,5).map(p=>p.title).join(" — ");
-}
+  const user = auth.currentUser;
+  if(user && user.email === ADMIN_EMAIL){
+    const adminDiv = document.createElement("div");
+    adminDiv.style.position="absolute";
+    adminDiv.style.top="8px";
+    adminDiv.style.right="8px";
+    adminDiv.style.display="flex";
+    adminDiv.style.gap="6px";
+    adminDiv.style.zIndex="30";
 
-// 🔹 Open Modal with images slider
-function openModal(post){
-  const modal = document.getElementById("postModal");
-  const titleEl = document.getElementById("modalTitle");
-  const catEl = document.getElementById("modalCategory");
-  const textBlocks = document.getElementById("modalTextBlocks");
-  const imgSlider = document.getElementById("modalImageSlider");
+    const editBtn = document.createElement("button");
+    editBtn.innerHTML="✏️ Edit";
+    editBtn.onclick = (e)=>{
+      e.stopPropagation();
+      editingId = d.id;
+      aTitle.value = d.title;
+      aCat.value = d.category;
+      blocksList.innerHTML="";
+      d.blocks.forEach(b=>{
+        if(b.type==="text"){
+          const t = document.createElement("textarea");
+          t.value = b.text;
+          t.dataset.type="text";
+          t.className="border p-2 w-full mb-2 rounded";
+          blocksList.appendChild(t);
+        } else {
+          const inp = document.createElement("input");
+          inp.type="file";
+          inp.className="w-full mb-2";
+          blocksList.appendChild(inp);
+        }
+      });
+      modalBg.style.display="none";
+    };
 
-  titleEl.textContent = post.title;
-  catEl.textContent = post.category || "";
-  textBlocks.innerHTML = "";
-  post.blocks.filter(b=>b.type==="text").forEach(t=>{
-    const p = document.createElement("p");
-    p.textContent = t.text;
-    p.className = "mb-2";
-    textBlocks.appendChild(p);
-  });
+    const delBtn = document.createElement("button");
+    delBtn.innerHTML="🗑️ Delete";
+    delBtn.style.background="linear-gradient(45deg,#ef4444,#b91c1c)";
+    delBtn.onclick=async(e)=>{
+      e.stopPropagation();
+      if(confirm("Delete this post?")){
+        await deleteDoc(doc(db,"news",d.id));
+        modalBg.style.display="none";
+      }
+    };
 
-  // Images
-  imgSlider.innerHTML = "";
-  const images = post.blocks.filter(b=>b.type==="image").map(b=>b.url);
-  images.forEach((url,i)=>{
-    const img = document.createElement("img");
-    img.src = url;
-    img.className = "absolute top-0 left-0 w-full h-full object-cover transition-opacity duration-500";
-    img.style.opacity = i===0?1:0;
-    imgSlider.appendChild(img);
-  });
-
-  let idx = 0;
-  if(images.length>1){
-    setInterval(()=>{
-      const imgs = imgSlider.querySelectorAll("img");
-      imgs.forEach((img,i)=>img.style.opacity = 0);
-      imgs[idx].style.opacity = 1;
-      idx = (idx+1)%imgs.length;
-    },3000);
+    adminDiv.appendChild(editBtn);
+    adminDiv.appendChild(delBtn);
+    modalContent.appendChild(adminDiv);
   }
 
-  modal.classList.remove("hidden");
-}
-document.getElementById("closeModal").onclick = ()=>document.getElementById("postModal").classList.add("hidden");
+  modalBg.style.display="flex";
 
-// 🔹 Menu toggle
-function toggleMenu(){document.getElementById("menuList").classList.toggle("hidden");}
+  modalContent.querySelectorAll("img.image-zoom").forEach(img=>{
+    img.onclick=()=>{zoomImg.src=img.src; zoomModal.style.display="flex";}
+  });
+}
+
+document.querySelector(".zoom-close").onclick=()=>zoomModal.style.display="none";
+zoomModal.onclick=e=>{if(e.target===zoomModal) zoomModal.style.display="none";}
 </script>
 
 <style>
 body{margin:0;font-family:Arial,sans-serif;background:#f6f7fb;color:#0b2540;}
 header{display:flex;justify-content:space-between;align-items:center;padding:8px 12px;background:#1e40af;color:white;position:sticky;top:0;z-index:300;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
 header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:cover;}
-.nav-btn,.auth-btn{padding:4px 8px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
-.nav-btn:hover
+.header-buttons button{padding:6px 12px;margin-left:6px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
+.header-buttons button:hover{transform:scale(1.05);}
+.notice-ticker,.headline-ticker{min-height:28px;overflow:hidden;white-space:nowrap;color:white;position:sticky;z-index:250;}
+.notice-ticker{background:#dc2626;padding:6px;top:56px;}
+.headline-ticker{background:#1e40af;padding:6px;top:88px;}
+.ticker-text{display:inline-block;padding-right:50px;animation:scroll 20s linear infinite;}
+@keyframes scroll{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
+.posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:116px;}
+.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;position:relative;}
+.card:hover{transform:scale(1.02);}
+.card img{width:100%;height:auto;object-fit:contain;cursor:zoom-in;transition:transform 0.3s;}
+.card-body{padding:8px;}
+.card-body h3{font-weight:700;font-size:18px;margin-bottom:4px;}
+.card-body p{font-size:14px;color:#555;margin-bottom:6px;}
+.editor{padding:12px;background:#fff;margin:6px;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
+.editor input,.editor textarea{border:1px solid #ccc;border-radius:6px;padding:6px;margin-bottom:6px;width:100%;}
+.editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
+.modal-bg{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:400;overflow:hidden;}
+.modal{background:#fff;border-radius:10px;max-width:650px;width:90%;max-height:85%;overflow-y:auto;padding:16px;position:relative;}
+.modal img{max-width:100%;border-radius:10px;margin-bottom:6px;}
+.modal-close{position:absolute;top:10px;right:15px;background:#fff;border:none;border-radius:50%;padding:5px 10px;cursor:pointer;font-weight:bold;}
+.zoom-modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;z-index:9999;}
+.zoom-modal img{max-width:90%;max-height:90%;border-radius:10px;box-shadow:0 0 25px rgba(255,255,255,0.3);}
+.zoom-close{position:absolute;top:20px;right:30px;background:#fff;border:none;border-radius:50%;font-size:20px;padding:5px 10px;cursor:pointer;}
+/* Bottom bar */
+.bottom-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 6px;
+  padding: 5px 4px;
+  background: linear-gradient(90deg, #1e3a8a, #2563eb);
+  box-shadow: 0 -4px 12px rgba(0,0,0,0.25);
+  z-index: 100000;
+}
+
+.bottom-bar button {
+  flex: 1;
+  margin: 0 4px;
+  background: #ffffff;
+  color: #1e3a8a;
+  font-weight: 700;
+  border: none;
+  border-radius: 8px;
+  padding: 5px 0;
+  cursor: pointer;
+  box-shadow: 0 4px 0 rgba(0,0,0,0.15);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  font-size: 13px;
+  transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.bottom-bar button:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 6px 6px rgba(0,0,0,0.2);
+}
+
+.bottom-bar button:active {
+  transform: translateY(0);
+  box-shadow: 0 4px 0 rgba(0,0,0,0.15);
+}
+
+@media (max-width:600px){
+  .bottom-bar button { font-size: 12px; padding: 4px 0; }
+}
+</style>
+</head>
+<body>
+
+<header>
+  <div class="flex items-center">
+    <img src="https://i.postimg.cc/6Q5TYPVR/Whats-App-Image-2025-10-26-at-2-42-16-PM.jpg" alt="Logo">
+    <h1 class="font-bold text-xl">Marathi Crime Files</h1>
+  </div>
+  <div class="header-buttons">
+    <button id="loginBtn" class="bg-green-500 text-white">Login</button>
+    <button id="logoutBtn" class="hidden bg-red-600 text-white">Logout</button>
+  </div>
+</header>
+
+<div class="notice-ticker"><span class="ticker-text" id="noticeText"></span></div>
+<div class="headline-ticker"><span class="ticker-text" id="headlineText"></span></div>
+
+<section id="postsArea" class="posts-grid"></section>
+
+<section id="noticeEditor" class="editor hidden">
+  <h2>📰 Admin Notice</h2>
+  <input id="noticeInput" placeholder="Enter notice text...">
+  <button id="saveNoticeBtn">Save</button>
+</section>
+
+<section id="editorArea" class="editor hidden">
+  <h2>🖋️ Admin: Create/Edit News</h2>
+  <input id="aTitle" placeholder="Title">
+  <input id="aCat" placeholder="Category">
+  <div id="blocksList"></div>
+  <button id="addTextBtn">Add Text</button>
+  <button id="addImageBtn">Add Image</button>
+  <button id="publishBtn">Publish</button>
+</section>
+
+<!-- Zoom modal -->
+<div id="zoomModal" class="zoom-modal" aria-hidden="true">
+  <button class="zoom-close" aria-label="Close zoom">X</button>
+  <img id="zoomImg" alt="Zoomed image">
+</div>
+
+<!-- Modal -->
+<div id="modalBg" class="modal-bg">
+  <div class="modal" id="modalContent">
+    <button class="modal-close" id="modalClose">X</button>
+  </div>
+</div>
+
+<!-- Bottom bar -->
+<footer class="bottom-bar" role="contentinfo" aria-label="Bottom navigation">
+  <button onclick="location.href='#about'"><span>🛈</span> About</button>
+  <button onclick="location.href='#contact'"><span>✉️</span> Contact</button>
+  <button onclick="location.href='#privacy'"><span>🔒</span> Privacy</button>
+</footer>
+
+</body>
+</html>
