--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="hi">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Marathi Crime Files</title>
 <script src="https://cdn.tailwindcss.com"></script>
 
 <!-- Firebase -->
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import { getFirestore, collection, addDoc, doc, setDoc, onSnapshot, query, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import { getAuth, signInWithPopup, GoogleAuthProvider, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { getFirestore, collection, addDoc, doc, setDoc, deleteDoc, onSnapshot, query, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
+// Firebase Config
 const firebaseConfig = {
   apiKey: "AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",
   authDomain: "marathi-crime-files.firebaseapp.com",
@@ -20,14 +21,13 @@ const firebaseConfig = {
   messagingSenderId: "973325762370",
   appId: "1:973325762370:web:4fb97306806bbe6cc0d2db"
 };
-
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 const provider = new GoogleAuthProvider();
 const ADMIN_EMAIL = "gulistankh2011@gmail.com";
 
-// DOM
+// DOM Elements
 const loginBtn = document.getElementById("loginBtn");
 const logoutBtn = document.getElementById("logoutBtn");
 const editorArea = document.getElementById("editorArea");
@@ -43,10 +43,11 @@ const headlineText = document.getElementById("headlineText");
 let editingId = null;
 let currentPosts = [];
 
-// Login / Logout
+// Login/Logout
 loginBtn.onclick = ()=>signInWithPopup(auth, provider).catch(e=>alert(e.message));
 logoutBtn.onclick = ()=>signOut(auth);
 
+// Auth State
 onAuthStateChanged(auth,user=>{
   if(user && user.email===ADMIN_EMAIL){
     editorArea.classList.remove("hidden");
@@ -68,14 +69,14 @@ document.getElementById("addTextBtn").onclick = ()=>{
   t.dataset.type = "text";
   t.className = "border p-2 w-full mb-2 rounded";
   blocksList.appendChild(t);
-};
+}
 document.getElementById("addImageBtn").onclick = ()=>{
   const inp = document.createElement("input");
   inp.type = "file";
   inp.dataset.type = "image";
   inp.className = "w-full mb-2";
   blocksList.appendChild(inp);
-};
+}
 
 // Publish News
 document.getElementById("publishBtn").onclick = async()=>{
@@ -101,7 +102,7 @@ document.getElementById("publishBtn").onclick = async()=>{
     await addDoc(collection(db,"news"),{title,category:cat,blocks,time:Date.now()});
   }
   aTitle.value=aCat.value=""; blocksList.innerHTML="";
-};
+}
 
 // Load Posts
 onSnapshot(query(collection(db,"news"),orderBy("time","desc")),snap=>{
@@ -109,90 +110,72 @@ onSnapshot(query(collection(db,"news"),orderBy("time","desc")),snap=>{
   renderPosts();
 });
 
-// Notice
-document.getElementById("saveNoticeBtn").onclick = async()=>{
-  await setDoc(doc(db,"settings","notice"),{text:noticeInput.value.trim()});
-};
-onSnapshot(doc(db,"settings","notice"),snap=>{
-  noticeText.textContent = snap.exists()?snap.data().text:"";
-});
-
-// Render Posts
+// Render Posts with Image Slider & Card Click
 function renderPosts(){
   postsArea.innerHTML="";
-  currentPosts.forEach(d=>{
+  currentPosts.forEach((d,i)=>{
     const firstImg = d.blocks.find(b=>b.type==="image")?.url || "https://via.placeholder.com/300x200?text=No+Image";
     const firstText = d.blocks.find(b=>b.type==="text")?.text.substring(0,80)+"..." || "";
     const card = document.createElement("div");
-    card.className="card cursor-pointer bg-white rounded shadow overflow-hidden flex flex-col";
-    card.innerHTML = `
-      <div class="w-full aspect-video overflow-hidden"><img src="${firstImg}" class="w-full h-full object-contain"></div>
-      <div class="p-2 flex-1 flex flex-col justify-between">
-        <h3 class="font-bold text-base">${d.title}</h3>
-        <p class="text-sm text-gray-700 mt-1">${firstText}</p>
-      </div>
-    `;
-    card.onclick = ()=>openModal(d);
+    card.className="card cursor-pointer";
+    card.innerHTML = `<img src='${firstImg}' class='card-img'><div class='card-body'><h3>${d.title}</h3><p>${firstText}</p></div>`;
+    card.onclick = ()=>alert(`Open news: ${d.title}`); // For now, alert; replace with modal if needed
     postsArea.appendChild(card);
   });
+
+  // Image Slider Animation
+  const sliderImgs = document.querySelectorAll(".card-img");
+  let idx = 0;
+  setInterval(()=>{
+    sliderImgs.forEach(img=>img.style.display="none");
+    if(sliderImgs[idx]) sliderImgs[idx].style.display="block";
+    idx = (idx+1)%sliderImgs.length;
+  },3000);
+
+  // Headline ticker
   headlineText.textContent=currentPosts.slice(0,5).map(p=>p.title).join(" — ");
 }
 
-// Modal
-function openModal(post){
-  const modal = document.getElementById("postModal");
-  document.getElementById("modalTitle").textContent = post.title;
-  document.getElementById("modalCategory").textContent = post.category||"";
-  const textBlocks = document.getElementById("modalTextBlocks");
-  const imgSlider = document.getElementById("modalImageSlider");
-  textBlocks.innerHTML=""; imgSlider.innerHTML="";
-  post.blocks.filter(b=>b.type==="text").forEach(t=>{
-    const p = document.createElement("p"); p.textContent=t.text; p.className="mb-2"; textBlocks.appendChild(p);
-  });
-  const images = post.blocks.filter(b=>b.type==="image").map(b=>b.url);
-  images.forEach((url,i)=>{
-    const img = document.createElement("img");
-    img.src = url;
-    img.className="absolute top-0 left-0 w-full h-full object-contain transition-opacity duration-500";
-    img.style.opacity=i===0?1:0;
-    imgSlider.appendChild(img);
-  });
-  let idx=0;
-  if(images.length>1){
-    setInterval(()=>{
-      const imgs = imgSlider.querySelectorAll("img");
-      imgs.forEach(img=>img.style.opacity=0);
-      imgs[idx].style.opacity=1;
-      idx=(idx+1)%imgs.length;
-    },3000);
-  }
-  modal.classList.remove("hidden");
-}
-document.getElementById("closeModal").onclick = ()=>document.getElementById("postModal").classList.add("hidden");
-
+// Toggle Menu
 function toggleMenu(){document.getElementById("menuList").classList.toggle("hidden");}
 
+// Scroll Ticker
+function startTicker(el){
+  const text = el;
+  let pos = el.parentElement.offsetWidth;
+  function animate(){
+    pos -= 1;
+    if(pos < -text.scrollWidth) pos = el.parentElement.offsetWidth;
+    text.style.transform = `translateX(${pos}px)`;
+    requestAnimationFrame(animate);
+  }
+  animate();
+}
+
+document.addEventListener("DOMContentLoaded",()=>{
+  startTicker(document.getElementById("noticeText"));
+  startTicker(document.getElementById("headlineText"));
+});
 </script>
 
 <style>
 body{margin:0;font-family:Arial,sans-serif;background:#f6f7fb;color:#0b2540;}
 header{display:flex;justify-content:space-between;align-items:center;padding:8px 12px;background:#1e40af;color:white;position:sticky;top:0;z-index:300;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
 header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:cover;}
-.nav-btn,.auth-btn{padding:4px 8px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
+.nav-btn, .auth-btn{padding:4px 8px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
 .nav-btn:hover,.auth-btn:hover{transform:scale(1.05);}
 .notice-ticker{background:#dc2626;color:white;font-weight:600;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:50px;z-index:300;}
 .headline-ticker{background:#2563eb;color:white;font-weight:500;font-size:13px;padding:4px 10px;overflow:hidden;white-space:nowrap;position:sticky;top:74px;z-index:300;}
 .posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:10px;}
-.card img{transition:transform 0.2s;}
-.card:hover img{transform:scale(1.05);}
+.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);transition:transform 0.2s;position:relative;}
+.card:hover{transform:scale(1.02);}
+.card img{width:100%;height:200px;object-fit:cover;display:block;}
+.card-body{padding:8px;}
+.card-body h3{font-weight:700;font-size:18px;margin-bottom:4px;}
+.card-body p{font-size:14px;color:#555;margin-bottom:6px;}
 .editor{padding:12px;background:#fff;margin:6px;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
 .editor input,.editor textarea{border:1px solid #ccc;border-radius:6px;padding:6px;margin-bottom:6px;width:100%;}
 .editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
-.modal-bg{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:9999;}
-.modal-content{background:#fff;border-radius:10px;width:90%;max-width:600px;max-height:85%;overflow-y:auto;padding:16px;position:relative;}
-.modal-content img{max-width:100%;margin-bottom:6px;border-radius:6px;}
-.close-modal{position:absolute;top:10px;right:10px;background:#fff;border:none;border-radius:50%;padding:5px 10px;cursor:pointer;font-weight:bold;}
-#modalImageSlider{position:relative;height:250px;}
 </style>
 </head>
 <body>
@@ -205,15 +188,15 @@ header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:
   <div class="relative">
     <button onclick="toggleMenu()" class="nav-btn">☰ Menu</button>
     <div id="menuList" class="hidden absolute right-0 mt-1 bg-white text-blue-900 rounded-md shadow-lg overflow-hidden z-[10000]">
-      <button class="dropdown-btn w-full text-left px-3 py-1 hover:bg-blue-100">Story</button>
-      <button class="dropdown-btn w-full text-left px-3 py-1 hover:bg-blue-100">Gumshuda</button>
-      <button class="dropdown-btn w-full text-left px-3 py-1 hover:bg-blue-100">Lawarish</button>
-      <button class="dropdown-btn w-full text-left px-3 py-1 hover:bg-blue-100">Crime</button>
+      <button class="dropdown-btn">Story</button>
+      <button class="dropdown-btn">Gumshuda</button>
+      <button class="dropdown-btn">Lawarish</button>
+      <button class="dropdown-btn">Crime</button>
     </div>
   </div>
   <div class="flex space-x-1">
-    <button id="loginBtn" class="auth-btn bg-green-500 text-white">Login</button>
-    <button id="logoutBtn" class="auth-btn bg-red-600 text-white hidden">Logout</button>
+    <button id="loginBtn" class="auth-btn bg-green-500 text-white px-2 py-1 text-sm">Login</button>
+    <button id="logoutBtn" class="auth-btn bg-red-600 text-white px-2 py-1 text-sm hidden">Logout</button>
   </div>
 </header>
 
@@ -237,17 +220,6 @@ header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:
   <input id="noticeInput" placeholder="Enter notice text...">
   <button id="saveNoticeBtn">Save Notice</button>
 </section>
-
-<!-- Modal -->
-<div id="postModal" class="modal-bg flex hidden">
-  <div class="modal-content">
-    <button id="closeModal" class="close-modal">X</button>
-    <h2 id="modalTitle" class="font-bold text-lg mb-1"></h2>
-    <h3 id="modalCategory" class="text-sm mb-3 text-gray-600"></h3>
-    <div id="modalImageSlider"></div>
-    <div id="modalTextBlocks" class="mt-2"></div>
-  </div>
-</div>
 
 </body>
 </html>
